-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
The instruction printer only tells that there is a deoptimization instruction, but not indicates they are deoptimized due to which class is not loaded.
Java
----
static void test1(Object[] arr) {
TestValue v = TestValue.default;
arr[0] = v;
}
HIR(OLD)
---
. 0 2 a2 deoptimize
. 5 1 i3 0
. 7 0 a4 a1[i3] := a2 (L) [rc] What's the type of a2?
. 8 0 v5 return
HIR(NEW)
---
. 0 2 a2 deoptimize [unloaded=Test$TestValue]
. 5 1 i3 0
. 7 0 a4 a1[i3] := a2 (L) [rc]
. 8 0 v5 return
Java
----
static void test1(Object[] arr) {
TestValue v = TestValue.default;
arr[0] = v;
}
HIR(OLD)
---
. 0 2 a2 deoptimize
. 5 1 i3 0
. 7 0 a4 a1[i3] := a2 (L) [rc] What's the type of a2?
. 8 0 v5 return
HIR(NEW)
---
. 0 2 a2 deoptimize [unloaded=Test$TestValue]
. 5 1 i3 0
. 7 0 a4 a1[i3] := a2 (L) [rc]
. 8 0 v5 return